# open-gl

./: .gitignore  CMakeLists.txt  comp.sh
include/glad/: glad.h
src/: glad.c  main.c  thing.c
src/old_shd/: reflectsphere.comp  triangle.vert
src/shd/: raytrace.comp  texture.frag  texture.vert  triangle.frag  triangle.vert
